<resources>
    <string name="app_name" translatable="false">DWMS</string>
    <string name="branding_name" translatable="false">© Ecosense Enviro Solutions Pvt Ltd</string>
    <string name="appTitle" translatable="false">EcoSense DWMS®</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string-array name="app_language" translatable="false">
        <item>English</item>
        <item>हिंदी</item>
        <item>ગુજરાતી</item>
        <item>मराठी</item>
    </string-array>
    <string-array name="place_type" translatable="false">
        <item>Bank</item>
        <item>Blood Bank</item>
        <item>Bus Station</item>
        <item>Community Center</item>
        <item>Colleges</item>
        <item>Embassy</item>
        <item>Gym</item>
        <item>Hospital</item>
        <item>Library</item>
        <item>LPG Gas Pumps</item>
        <item>Market</item>
        <item>Monuments</item>
        <item>Parking Place</item>
        <item>Petrol Pumps</item>
        <item>Police Station</item>
        <item>Post Office</item>
        <item>Public Toilet</item>
        <item>Stadium</item>
        <item>School</item>
        <item>Taxi Stand</item>
        <item>Tourist Place</item>
    </string-array>
    <string name="individual" translatable="false">Individual</string>
    <string name="corporate" translatable="false">Corporate</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="status_service_create">Service started</string>
    <string name="status_service_destroy">Service stopped</string>
    <string name="status_send_success">Send successfully</string>
    <string name="status_send_fail">Send failed</string>
    <string name="status_location_update">Location update</string>
    <string name="status_network_online">Network online</string>
    <string name="status_network_offline">Network offline</string>
    <string name="hidden_app_name">Device Settings</string>
    <string name="hidden_alert">The app has been hidden. To open it again please dial 8722227 (TRACCAR).</string>
    <string name="error_msg_invalid_url" translatable="false">Please enter a valid http:// or https:// URL</string>
    <string name="channel_default">Primary Channel</string>
    <string name="settings_accuracy_values_high" translatable="false">high</string>
    <string name="authKey" translatable="false">295713AN9brGt9hqC5d8a0846</string>
    <string name="template_id" translatable="false">5e8ec03dd6fc053818325ead</string>
    <string name="invisible" translatable="false">1</string>
    <string name="otp_length" translatable="false">4</string>
    <string name="otp_expiry" translatable="false">5</string>
    <string name="retrytype" translatable="false">text</string>
    <string name="country" translatable="false">91</string>
    <string name="MSGIND" translatable="false">TEAMNE</string>
    <string name="route" translatable="false">4</string>
    <string name="response" translatable="false">json</string>
    <string name="not_reg_msg" translatable="false">User is not Registered</string>
    <string name="cart_update_msg" translatable="false">Successfully updated cart</string>
    <string name="otp_success" translatable="false">OTP Send Successfully</string>
    <string name="otp_resend_success" translatable="false">OTP Resend Successfully</string>
    <string-array name="settings_accuracy_values" translatable="false">
        <item>high</item>
        <item>medium</item>
        <item>low</item>
    </string-array>
    <string name="exit_msg" translatable="false">Do you want to exit application ?</string>
    <string name="logout_msg" translatable="false">Do you want to Logout application ?</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="no_record_found_pull_to_refresh">No record found, Please pull to refresh</string>
    <string name="Nearby_Place">Nearby Place</string>
    <string name="logout">Logout</string>
    <string name="please_wait">Please Wait...</string>
    <string name="back_online">Back-Online</string>
    <string name="you_are_offline">You\'re Offline</string>
    <string name="user_not_registered_please_contact_admin">User is not Registered please contact Admin</string>
    <string name="no_internet_alert" translatable="false">No internet connection.\n Please Turn on internet.</string>
    <string name="network_error">Network Error!</string>
    <string name="response_error">Response Error!</string>
    <string name="no_record_found_error">No record found!</string>
    <string name="failed_to_registration_error">Failed to Registration!</string>
    <string name="could_no_send_error">Error! Could not send</string>
    <string name="btn_save">Save</string>
    <string name="title_activity_supervisor_home">Dashboard</string>
    <string name="team_login">Team Login</string>
    <string name="send_otp">Send OTP</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="msg_sit_back">A OTP has been sent to</string>
    <string name="msg_manual_otp">Enter the OTP below in case if we fail to detect the SMS automatically.</string>
    <string name="edit_mobile_number">Edit Mobile Number</string>
    <string name="error_mno_10digit">Mobile No. Must be 10 digit</string>
    <string name="error_email_id">Enter valid Email Address</string>
    <string name="error_Invalid_OTP">Invalid OTP</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="Finding_Location">Finding Location…</string>
    <string name="location_services_not_active">Location Services Not Active</string>
    <string name="please_enable_location">Please enable Location Services and GPS</string>
    <string name="route_Plotting_Start">Route Plotting Started</string>
    <string name="route_Plotting_Stop">Route Plotting Stopped</string>
    <string name="route_Plotting_Already_Running">Route Plotting Already Running</string>
    <string name="btn_ok">OK</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tab_news">News</string>
    <string name="tab_events">Events</string>
    <string name="tab_how_to_s">How To\'s</string>
    <string name="tav_favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="search_by_location">Search by location</string>
    <string name="event_detail">Event Detail</string>
    <string name="share_event">Share Event</string>
    <string name="share_how_to_s">Share How-Tos</string>
    <string name="Survey_is_all_ready_taken_by_user">Survey is all ready taken by user</string>
    <string name="next">Next</string>
    <string name="complete">Complete</string>
    <string name="about_city">About City</string>
    <string name="municipal_department">Municipal\ndepartment</string>
    <string name="nearby_facilities">Nearby\nFacilities</string>
    <string name="collection_point">Collection\nPoint</string>
    <string name="toilet_locators">Toilet\nLocators</string>
    <string name="helpline">Helpline</string>
    <string name="redirect_webpage_title">Redirecting to WebBrowser</string>
    <string name="redirect_webpage_msg">This action will open a new browser window. To return back to this app, please press the back button on your phone.</string>
    <string name="You_can_t_make_map_requests">You can\'t make map requests</string>
    <string name="search_by_name">Search by name</string>
    <string name="unable_to_get_current_location">unable to get current location</string>
    <string name="ward_no">Ward No. :</string>
    <string name="btn_submit">Submit</string>
    <string name="type">Type : </string>
    <string name="route_no">Route No. : </string>
    <string name="Service_Request_Number">Service Request Number : </string>
    <string name="somthing_wrong">Something is wrong!</string>
    <string name="commercial_establishment_name">Commercial Establishment Name</string>
    <string name="location_where_problem_was_observed">Location where problem was observed</string>
    <string name="request_description_optional">Request Description (optional)</string>
    <string name="request_type">Request Type</string>
    <string name="type_of_location">Type of Location</string>
    <string name="everyone_must_be_his_own_scavenger_n_m_k_gandhi">Everyone must be his own scavenger\n- M. K. Gandhi</string>
    <string name="did_you_know_50_of_ncomplaints_in_your_area_are_nrelated_to_delayed_service">Did you know: 50% of \ncomplaints in your area are \nrelated to delayed service.</string>
    <string name="Updated_Service_Request_Number">Updated Service Request Number</string>
    <string name="New_Service_Request_Number">New Service Request  Number</string>
    <string name="comp_type">Comp. Type : </string>
    <string name="type_of_loc">Type of Loc. : </string>
    <string name="assign_to">Assign to : </string>
    <string name="Enter_Establishment_Name">Enter Establishment Name</string>
    <string name="error">Error..</string>
    <string name="alert">Alert</string>
    <string name="SR_delete">Are you sure Delete service Request</string>
    <string name="SR_reopen">Are you sure Reopen service Request ?</string>
    <string name="Are_you_sure_edit_service_Request">Are you sure edit service Request ?</string>
    <string name="tab_Dashboard">Dashboard</string>
    <string name="yab_My_Activity">My Activity</string>
    <string name="my_complaints">My Complaints</string>
    <string name="pending">Pending</string>
    <string name="in_prog">In Prog.</string>
    <string name="Closed">Closed</string>
    <string name="survey_taken_of_waste">Survey Taken of Waste</string>
    <string name="complaint_no">Complaint No. :</string>
    <string name="start">Start</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List VIew</string>
    <string name="my_expense">My Expense</string>
    <string name="my_voucher">My Voucher</string>
    <string name="home">Home</string>
    <string name="filter">Filter</string>
    <string name="voucher_request">Voucher Request</string>
    <string name="call_driver">Call Driver</string>
    <string name="na_tag">NA</string>
    <string name="toast_filtered_routes">Showing %1$d out of %2$d routes.</string>
    <string name="tv_count_5">5</string>
    <string name="tv_no_item">No item!</string>
    <string name="tv_poi">POI\'s Marked</string>
    <string name="tv_total">Total: %1$d</string>
    <string name="tv_filtered_view">Filtered View</string>
    <string name="button_retry">Retry</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_sync_all">Sync all</string>
    <string name="dialog_confirmation_title">Confirm</string>
    <string name="dialog_confirmation_description">Are you sure?</string>
    <string name="dialog_start_plotting_title">Start Plotting?</string>
    <string name="dialog_authentication_error_title">Authentication Failed!</string>
    <string name="dialog_text_view_problem">Problem:</string>
    <string name="dialog_text_view_solution">Solution:</string>
    <string name="dialog_problem_network_failure">Network Failure!</string>
    <string name="dialog_solution_network_failure">Connect to a network having internet connection or switch on your mobile data.</string>
    <string name="et_hint_zone_number">Zone Number</string>
    <string name="et_hint_ward_number">Ward Number</string>
    <string name="et_hint_vehicle_number">Vehicle Number</string>
    <string name="et_hint_route_name">Route Name</string>
</resources>