<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter_search"
        android:title="@string/search"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/navigation_mapView"
        android:icon="@drawable/ic_placeholder"
        app:showAsAction="always"
        android:title="@string/map_view" />

    <item
        android:id="@+id/navigation_listView"
        app:showAsAction="always"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/list_view" />
    <item
        android:id="@+id/navigation_expense"
        android:icon="@drawable/ic_expance"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/my_expense" />
    <item
        android:id="@+id/navigation_my_voucher"
        app:showAsAction="never"
        android:visible="false"
        android:title="@string/my_voucher" />
</menu>